--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <title>My Online Portfolio | Home Page</title>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="/css/mvp.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="banner">
@@ -22,14 +23,14 @@
       </nav>
     </div>
     <div id="intro" class="section">
-      <div class="two-column">
+      <div class="two-column left-column">
         <h3>About Me and Academic Honesty</h3>
         <p>
           I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. I also declare that no part of this assignment has been distributed to other students.
         </p>
         <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
       </div>
-      <div class="two-column">
+      <div class="two-column right-column">
         <h3>Basic Information</h3>
         <dl>
           <dt>Age:</dt>
@@ -48,214 +49,183 @@
       </div>
     </div>
     <div id="education" class="section">
-      <h2>Education</h2>
-      <div class="four-column">
-        <figure>
-          <img src="images/Notophthalmus viridescens viridescens.jpeg" alt="Red-spotted Newt" />
-          <figcaption>Image of a Red-spotted Newt</figcaption>
-        </figure>
-        <h4>Red-spotted Newt</h4>
-        <h5>(Notophthalmus viridescens<br />viridescens)</h5>
-      </div>
-      <div class="four-column">
-        <figure>
-          <img src="images/Notophthalmus viridescens dorsalis.jpeg" alt="Broken-striped Newt" />
-          <figcaption>Image of a Broken-striped Newt</figcaption>
-        </figure>
-        <h4>Broken-striped Newt</h4>
-        <h5>(Notophthalmus viridescens<br />dorsalis)</h5>
-      </div>
-      <div class="four-column">
-        <figure>
-          <img src="images/Notophthalmus viridescens louisianensis.jpeg" alt="Central Newt" />
-          <figcaption>Image of a Central Newt</figcaption>
-        </figure>
-        <h4>Central Newt</h4>
-        <h5>(Notophthalmus viridescens<br />louisianensis)</h5>
-      </div>
-      <div class="four-column">
-        <figure>
-          <img src="images/Notophthalmus viridescens piaropicola.jpeg" alt="Peninsula Newt" />
-          <figcaption>Image of a Peninsula Newt</figcaption>
-        </figure>
-        <h4>Peninsula Newt</h4>
-        <h5>(Notophthalmus viridescens<br />piaropicola)</h5>
-      </div>
-    </div>
-    <div id="additional-info-1" class="section">
-      <div id="physical" class="three-column">
-        <h2>Appearance</h2>
+      <div class="two-column left-column">
+        <h3>Education</h3>
         <p>
-          Eastern newts are colored yellow or greenish-brown with red spots bordered by black on
-          their back. They have light yellow bellies with black spots. They have moist, rough skin.
+        <span>Seneca College</span>
+        <span>Computer Programming</span>
+        <span>May 2022 - Present</span>
         </p>
+        <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
       </div>
-      <div id="habitat" class="three-column">
-        <h2>Habitat</h2>
-        <p>
-          Eastern newts live in coniferous and deciduous forests. They thrive in moist or muddy
-          environments. In their eft stage, they can travel far from their original home. Adult
-          Eastern newts prefer muddy environments but are also seen moving to land in a dry spell.
-        </p>
-      </div>
-      <div id="lifespan-size" class="three-column">
-        <h2>Lifespan and Size</h2>
-        <p>
-          Eastern newts live between 12 to 15 years. They can grow between 2.5 to 5 inches long.
-        </p>
-      </div>
-    </div>
-    <div id="life-cycle" class="section">
-      <h2>Life Cycle</h2>
-      <figure>
-        <img src="images/Life Stages.jpeg" alt="Life Stages of an Eastern Newt" />
-        <figcaption>
-          <cite>The life cycle of Eastern newts</cite>. Diagram by Joven et al., 2019.
-        </figcaption>
-      </figure>
-      <div class="three-column">
-        <h3>Aquatic Larva</h3>
-        <p>
-          The Eastern newt larva has gills and stays in the pond environment where it was hatched.
-          They are brown green and lose their gills once they change to the red eft.
-        </p>
-      </div>
-      <div class="three-column">
-        <h3>Red Eft or Juvenile Stage</h3>
-        <p>
-          It takes around 3 months for a young Eastern newt to get from larva stage to the red eft
-          stage. This stage is characterized by a bright orange-red color with darker shades of red
-          spots in the back. The pattern of the spots can vary depending on the subspecies.
-        </p>
-      </div>
-      <div class="three-column">
-        <h3>Aquatic Adult</h3>
-        <p>
-          This stage takes a period of 2 - 3 years. The eft will find a pond and transform into an
-          aquatic adult. An adult is characterized by a dull olive green dorsally and a dull yellow
-          belly. The black-rimmed red spots remains. The Eastern newt then develops bigger,
-          blade-like tail and skimy skin.
-        </p>
-      </div>
-    </div>
-    <div id="media-vid" class="section">
-      <div class="two-column column-left">
-        <iframe
-          width="700"
-          height="450"
-          src="https://www.youtube.com/embed/wZCIIlIwcIs"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-      </div>
-      <div class="two-column column-right">
-        <h2>Conservation Concerns</h2>
-        <p>
-          Eastern newts are increasingly threatened by climate change, habitat loss, presence of
-          invasive species, over-exploitation and diseases.
-        </p>
-        <div id="media-audio">
-          <h2>Sound of a Newt</h2>
-          <audio controls>
-            <source src="audio/sound-of-newt.mp3" type="audio/mpeg" />
-            Your browser does not support the audio tag.
-          </audio>
+      <div class="two-column right-column">
+        <h3>Skills</h3>
+        <div class="flex flex-50-gt-sm waypoint bars-wrap">
+          <div class="bar flex">
+            <div class="bar fill" style="width:90%">
+              <div class="tag bold flex">CSS</div>
+            </div>
+            <span>90%</span>
+          </div>
+          <div class="bar flex">
+            <div class="bar fill" style="width:90%">
+              <div class="tag bold flex">HTML</div>
+            </div>
+            <span>90%</span>
+          </div>
+          <div class="bar flex">
+            <div class="bar fill" style="width:80%">
+              <div class="tag bold flex">React</div>
+            </div>
+            <span>80%</span>
+          </div>
+          <div class="bar flex">
+            <div class="bar fill" style="width:30%">
+              <div class="tag bold flex">JavaScript</div>
+            </div>
+            <span>80%</span>
+          </div>
+          <div class="bar flex">
+            <div class="bar fill" style="width:50%">
+              <div class="tag bold flex">UI Design</div>
+            </div>
+            <span>50%</span>
+          </div>
+
+          <div class="bar flex">
+            <div class="bar fill" style="width:30%">
+              <div class="tag bold flex">Photoshop</div>
+            </div>
+            <span>60%</span>
+          </div>
+          <div class="bar flex">
+            <div class="bar fill" style="width:70%">
+              <div class="tag bold flex">Illustrator</div>
+            </div>
+            <span>60%</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div id="additional-info" class="section">
-      <div id="diet" class="three-column">
-        <h2>Diet</h2>
-        <p>
-          Eastern newts' diet is varied. They can eat insects, springtails, soil mixes, small
-          mollusks and crustaceans, amphibians, worms and frog eggs. Then can also consume snails,
-          beetles, ants and mosquito larvae. Because of this diet, they help control insect
-          population. Easter newts are active animals and needs to feed every two to three days.
-        </p>
-      </div>
-      <div id="reproduction" class="three-column">
-        <h2>Reproduction</h2>
-        <p>
-          They breed from late winter to early spring. Males use their tails to court females by
-          movements, wiggling and emitting pheromones. They mate in an amplexus position. The male's
-          sperm packet is deposited on the bottom of the body of water. The female then picks these
-          up with her cloaca in order to fertilize her eggs. Around 200 to 400 jelly-covered eggs
-          are laid on underwater plants. Eastern newts do not perform parental care of their young.
-        </p>
-      </div>
-      <div id="survival" class="three-column">
-        <h2>Survival</h2>
-        <p>
-          Eastern newts secrete toxins through their skin. This help shield them from predators.
-          These toxins are harmful to humans thus Eastern newts shouldn't be held with bare hands.
-          The bright red color of the adults also serve as a warning to predators. Eastern newts
-          have poison glands producing tetrodotoxin. This toxin is known to cause paralysis, skin
-          irritation and even death in predators.Because of their tail depth, Eastern newts are also
-          capable of swimming quickly away from danger.
-        </p>
       </div>
     </div>
-    <div id="gallery" class="section">
-      <!--<h2>Gallery</h2>-->
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_1.jpeg">
-          <img src="images/img_1.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_2.jpeg">
-          <img src="images/img_2.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_3.jpeg">
-          <img src="images/img_3.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_4.jpeg">
-          <img src="images/img_4.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_5.jpeg">
-          <img src="images/img_5.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_6.jpeg">
-          <img src="images/img_6.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_7.jpeg">
-          <img src="images/img_7.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_8.jpeg">
-          <img src="images/img_8.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_9.jpeg">
-          <img src="images/img_9.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
-      <div class="gallery-photo">
-        <a target="_blank" href="images/img_10.jpeg">
-          <img src="images/img_10.jpeg" alt="Eastern Newt" />
-        </a>
-      </div>
+    <div id="contact" class="section">
+      <form action="https://httpbin.org/" method="post" class="input-form">
+        <div class="input-wrapper">
+          <label for="name">Name: </label>
+          <input type="text" name="name" id="name" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="email">Email Address: </label>
+          <input type="email" name="email" id="email" required>
+        </div>
+        <div class="input-wrapper">
+          <label>Gender: </label>
+          <input type="checkbox" id="male" name="male" value="male">
+          <label for="male">Male</label><br>
+          <input type="checkbox" id="female" name="female" value="female">
+          <label for="male">Female</label><br>
+          <input type="checkbox" id="other" name="other" value="other">
+          <label for="other">Other</label><br>
+          <input type="checkbox" id="undisclosed" name="undisclosed" value="undisclosed">
+          <label for="undisclosed">Rather not say</label><br>
+        </div>
+        <div class="input-wrapper">
+          <label for="Address">Address: </label>
+          <input type="text" name="address" id="address" required>
+        </div>
+        <div class="input-wrapper">
+          <label for="city">City: </label>
+          <input type="text" id="city" name="city" list="city-list" />
+          <datalist id="city-list">
+            <!--[if lte IE 9]><select><![endif]-->
+            <option label="" value="Abbotsford"></option>
+            <option label="" value="Airdrie"></option>
+            <option label="" value="Barrie"></option>
+            <option label="" value="Belleville"></option>
+            <option label="" value="Brampton"></option>
+            <option label="" value="Brantford"></option>
+            <option label="" value="Burlington"></option>
+            <option label="" value="Burnaby"></option>
+            <option label="" value="Calgary"></option>
+            <option label="" value="Cambridge"></option>
+            <option label="" value="Chilliwack"></option>
+            <option label="" value="Coquitlam"></option>
+            <option label="" value="Delta"></option>
+            <option label="" value="Edmonton"></option>
+            <option label="" value="Fredericton"></option>
+            <option label="" value="Grande Prairie"></option>
+            <option label="" value="Greater Sudbury"></option>
+            <option label="" value="Guelph"></option>
+            <option label="" value="Hamilton"></option>
+            <option label="" value="Kamloops"></option>
+            <option label="" value="Kawartha Lakes"></option>
+            <option label="" value="Kelowna"></option>
+            <option label="" value="Kingston"></option>
+            <option label="" value="Kitchener"></option>
+            <option label="" value="Lethbridge"></option>
+            <option label="" value="London"></option>
+            <option label="" value="Maple Ridge"></option>
+            <option label="" value="Markham"></option>
+            <option label="" value="Medicine Hat"></option>
+            <option label="" value="Mirabel"></option>
+            <option label="" value="Mississauga"></option>
+            <option label="" value="Moncton"></option>
+            <option label="" value="Nanaimo"></option>
+            <option label="" value="New Westminster"></option>
+            <option label="" value="Niagara Falls"></option>
+            <option label="" value="Norfolk County"></option>
+            <option label="" value="North Bay"></option>
+            <option label="" value="North Vancouver"></option>
+            <option label="" value="Oshawa"></option>
+            <option label="" value="Ottawa"></option>
+            <option label="" value="Peterborough"></option>
+            <option label="" value="Pickering"></option>
+            <option label="" value="Port Coquitlam"></option>
+            <option label="" value="Prince George"></option>
+            <option label="" value="Red Deer"></option>
+            <option label="" value="Regina"></option>
+            <option label="" value="Richmond"></option>
+            <option label="" value="Richmond Hill"></option>
+            <option label="" value="Saint John"></option>
+            <option label="" value="Sarnia"></option>
+            <option label="" value="Saskatoon"></option>
+            <option label="" value="Sault Ste. Marie"></option>
+            <option label="" value="St. Albert"></option>
+            <option label="" value="St. Catharines"></option>
+            <option label="" value="St. John's"></option>
+            <option label="" value="Surrey"></option>
+            <option label="" value="Thunder Bay"></option>
+            <option label="" value="Toronto"></option>
+            <option label="" value="Vancouver"></option>
+            <option label="" value="Vaughan"></option>
+            <option label="" value="Victoria"></option>
+            <option label="" value="Waterloo"></option>
+            <option label="" value="Welland"></option>
+            <option label="" value="Windsor"></option>
+            <option label="" value="Winnipeg"></option>
+            <!--[if lte IE 9]></select><![endif]-->
+          </datalist>
+        </div>
+        <div class="input-wrapper">
+          <label>Purpose of Contact: </label>
+          <input type="radio" id="question" name="purpose" value="purpose">
+          <label for="question">Question</label><br>
+          <input type="radio" id="Comment" name="purpose" value="comment">
+          <label for="comment">Comment</label><br>
+          <input type="radio" id="hiring" name="purpose" value="hiring">
+          <label for="hiring">Hiring</label><br>
+        </div>
+        <div class="input-wrapper">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="5" cols="50">
+          Enter your message here.
+          </textarea>
+        </div>
+        <div class="input-wrapper">
+          <input type="submit" value="Submit">
+        </div>
+      </form>
+      
     </div>
     <!--<div id="bottom-wrapper" class="section">
     </div>-->
