--- a/index.html
+++ b/index.html
@@ -9,223 +9,225 @@
     <link href="/css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <div id="banner">
-      <img src="images/header2.jpeg" width="100%" alt="Eastern Newt" />
-      <header>
-        <h1>Hello, I'm Kiara Pelenio</h1>
-        <p><i>Web Developer</i></p>
-      </header>
-    </div>
-    <div id="menu">
-      <nav>
-        <a href="/assets/Kiara_CV.pdf" download>Resume</a> | 
-        <a href="#contact">Contact Me</a>
-      </nav>
-    </div>
-    <div id="intro" class="section">
-      <div class="two-column left-column">
-        <h3>About Me and Academic Honesty</h3>
-        <p>
-          I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. I also declare that no part of this assignment has been distributed to other students.
-        </p>
-        <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
+    <div id="content-wrapper">
+      <div id="banner">
+        <img src="images/header2.jpeg" width="100%" alt="Eastern Newt" />
+        <header>
+          <h1>Hello, I'm Kiara Pelenio</h1>
+          <p><i>Web Developer</i></p>
+        </header>
       </div>
-      <div class="two-column right-column">
-        <h3>Basic Information</h3>
-        <dl>
-          <dt>Age:</dt>
-          <dd>34</dd>
-          <dt>Email:</dt>
-          <dd>krpelenio@myseneca.ca</dd>
-          <dt>Language:</dt>
-          <dd>Cebuano, Tagalog, English</dd>
-          <dt>Class Section:</dt>
-          <dd>NFF</dd>
-          <dt>Student ID:</dt>
-          <dd>126361211</dd>
-          <dt>Instructor:</dt>
-          <dd>Mark Meritt</dd>
-        </dl>
+      <div id="menu">
+        <nav>
+          <a href="/assets/Kiara_CV.pdf" download>Resume</a> | 
+          <a href="#contact">Contact Me</a>
+        </nav>
       </div>
-    </div>
-    <div id="education" class="section">
-      <div class="two-column left-column">
-        <h3>Education</h3>
-        <p>
-        <span>Seneca College</span>
-        <span>Computer Programming</span>
-        <span>May 2022 - Present</span>
-        </p>
-        <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
+      <div id="intro" class="section">
+        <div class="two-column left-column">
+          <h3>About Me and Academic Honesty</h3>
+          <p>
+            I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. I also declare that no part of this assignment has been distributed to other students.
+          </p>
+          <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
+        </div>
+        <div class="two-column right-column">
+          <h3>Basic Information</h3>
+          <dl>
+            <dt>Age:</dt>
+            <dd>34</dd>
+            <dt>Email:</dt>
+            <dd>krpelenio@myseneca.ca</dd>
+            <dt>Language:</dt>
+            <dd>Cebuano, Tagalog, English</dd>
+            <dt>Class Section:</dt>
+            <dd>NFF</dd>
+            <dt>Student ID:</dt>
+            <dd>126361211</dd>
+            <dt>Instructor:</dt>
+            <dd>Mark Meritt</dd>
+          </dl>
+        </div>
       </div>
-      <div class="two-column right-column">
-        <h3>Skills</h3>
-        <div class="flex flex-50-gt-sm waypoint bars-wrap">
-          <div class="bar flex">
-            <div class="bar fill" style="width:90%">
-              <div class="tag bold flex">CSS</div>
+      <div id="education" class="section">
+        <div class="two-column left-column">
+          <h3>Education</h3>
+          <p>
+          <span>Seneca College</span>
+          <span>Computer Programming</span>
+          <span>May 2022 - Present</span>
+          </p>
+          <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
+        </div>
+        <div class="two-column right-column">
+          <h3>Skills</h3>
+          <div class="flex flex-50-gt-sm waypoint bars-wrap">
+            <div class="bar flex">
+              <div class="bar fill" style="width:90%">
+                <div class="tag bold flex">CSS</div>
+              </div>
+              <span>90%</span>
             </div>
-            <span>90%</span>
-          </div>
-          <div class="bar flex">
-            <div class="bar fill" style="width:90%">
-              <div class="tag bold flex">HTML</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:90%">
+                <div class="tag bold flex">HTML</div>
+              </div>
+              <span>90%</span>
             </div>
-            <span>90%</span>
-          </div>
-          <div class="bar flex">
-            <div class="bar fill" style="width:80%">
-              <div class="tag bold flex">React</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:80%">
+                <div class="tag bold flex">React</div>
+              </div>
+              <span>80%</span>
             </div>
-            <span>80%</span>
-          </div>
-          <div class="bar flex">
-            <div class="bar fill" style="width:30%">
-              <div class="tag bold flex">JavaScript</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:30%">
+                <div class="tag bold flex">JavaScript</div>
+              </div>
+              <span>80%</span>
             </div>
-            <span>80%</span>
-          </div>
-          <div class="bar flex">
-            <div class="bar fill" style="width:50%">
-              <div class="tag bold flex">UI Design</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:50%">
+                <div class="tag bold flex">UI Design</div>
+              </div>
+              <span>50%</span>
             </div>
-            <span>50%</span>
-          </div>
 
-          <div class="bar flex">
-            <div class="bar fill" style="width:30%">
-              <div class="tag bold flex">Photoshop</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:30%">
+                <div class="tag bold flex">Photoshop</div>
+              </div>
+              <span>60%</span>
             </div>
-            <span>60%</span>
-          </div>
-          <div class="bar flex">
-            <div class="bar fill" style="width:70%">
-              <div class="tag bold flex">Illustrator</div>
+            <div class="bar flex">
+              <div class="bar fill" style="width:70%">
+                <div class="tag bold flex">Illustrator</div>
+              </div>
+              <span>60%</span>
             </div>
-            <span>60%</span>
           </div>
+        </div>
         </div>
       </div>
+      <div id="contact" class="section">
+        <form action="https://httpbin.org/" method="post" class="input-form">
+          <div class="input-wrapper">
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name" required>
+          </div>
+          <div class="input-wrapper">
+            <label for="email">Email Address: </label>
+            <input type="email" name="email" id="email" required>
+          </div>
+          <div class="input-wrapper">
+            <label>Gender: </label>
+            <input type="checkbox" id="male" name="male" value="male">
+            <label for="male">Male</label><br>
+            <input type="checkbox" id="female" name="female" value="female">
+            <label for="male">Female</label><br>
+            <input type="checkbox" id="other" name="other" value="other">
+            <label for="other">Other</label><br>
+            <input type="checkbox" id="undisclosed" name="undisclosed" value="undisclosed">
+            <label for="undisclosed">Rather not say</label><br>
+          </div>
+          <div class="input-wrapper">
+            <label for="Address">Address: </label>
+            <input type="text" name="address" id="address" required>
+          </div>
+          <div class="input-wrapper">
+            <label for="city">City: </label>
+            <input type="text" id="city" name="city" list="city-list" />
+            <datalist id="city-list">
+              <!--[if lte IE 9]><select><![endif]-->
+              <option label="" value="Abbotsford"></option>
+              <option label="" value="Airdrie"></option>
+              <option label="" value="Barrie"></option>
+              <option label="" value="Belleville"></option>
+              <option label="" value="Brampton"></option>
+              <option label="" value="Brantford"></option>
+              <option label="" value="Burlington"></option>
+              <option label="" value="Burnaby"></option>
+              <option label="" value="Calgary"></option>
+              <option label="" value="Cambridge"></option>
+              <option label="" value="Chilliwack"></option>
+              <option label="" value="Coquitlam"></option>
+              <option label="" value="Delta"></option>
+              <option label="" value="Edmonton"></option>
+              <option label="" value="Fredericton"></option>
+              <option label="" value="Grande Prairie"></option>
+              <option label="" value="Greater Sudbury"></option>
+              <option label="" value="Guelph"></option>
+              <option label="" value="Hamilton"></option>
+              <option label="" value="Kamloops"></option>
+              <option label="" value="Kawartha Lakes"></option>
+              <option label="" value="Kelowna"></option>
+              <option label="" value="Kingston"></option>
+              <option label="" value="Kitchener"></option>
+              <option label="" value="Lethbridge"></option>
+              <option label="" value="London"></option>
+              <option label="" value="Maple Ridge"></option>
+              <option label="" value="Markham"></option>
+              <option label="" value="Medicine Hat"></option>
+              <option label="" value="Mirabel"></option>
+              <option label="" value="Mississauga"></option>
+              <option label="" value="Moncton"></option>
+              <option label="" value="Nanaimo"></option>
+              <option label="" value="New Westminster"></option>
+              <option label="" value="Niagara Falls"></option>
+              <option label="" value="Norfolk County"></option>
+              <option label="" value="North Bay"></option>
+              <option label="" value="North Vancouver"></option>
+              <option label="" value="Oshawa"></option>
+              <option label="" value="Ottawa"></option>
+              <option label="" value="Peterborough"></option>
+              <option label="" value="Pickering"></option>
+              <option label="" value="Port Coquitlam"></option>
+              <option label="" value="Prince George"></option>
+              <option label="" value="Red Deer"></option>
+              <option label="" value="Regina"></option>
+              <option label="" value="Richmond"></option>
+              <option label="" value="Richmond Hill"></option>
+              <option label="" value="Saint John"></option>
+              <option label="" value="Sarnia"></option>
+              <option label="" value="Saskatoon"></option>
+              <option label="" value="Sault Ste. Marie"></option>
+              <option label="" value="St. Albert"></option>
+              <option label="" value="St. Catharines"></option>
+              <option label="" value="St. John's"></option>
+              <option label="" value="Surrey"></option>
+              <option label="" value="Thunder Bay"></option>
+              <option label="" value="Toronto"></option>
+              <option label="" value="Vancouver"></option>
+              <option label="" value="Vaughan"></option>
+              <option label="" value="Victoria"></option>
+              <option label="" value="Waterloo"></option>
+              <option label="" value="Welland"></option>
+              <option label="" value="Windsor"></option>
+              <option label="" value="Winnipeg"></option>
+              <!--[if lte IE 9]></select><![endif]-->
+            </datalist>
+          </div>
+          <div class="input-wrapper">
+            <label>Purpose of Contact: </label>
+            <input type="radio" id="question" name="purpose" value="purpose">
+            <label for="question">Question</label><br>
+            <input type="radio" id="Comment" name="purpose" value="comment">
+            <label for="comment">Comment</label><br>
+            <input type="radio" id="hiring" name="purpose" value="hiring">
+            <label for="hiring">Hiring</label><br>
+          </div>
+          <div class="input-wrapper">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5" cols="50">
+            Enter your message here.
+            </textarea>
+          </div>
+          <div class="input-wrapper">
+            <input type="submit" value="Submit">
+          </div>
+        </form>
+        
       </div>
-    </div>
-    <div id="contact" class="section">
-      <form action="https://httpbin.org/" method="post" class="input-form">
-        <div class="input-wrapper">
-          <label for="name">Name: </label>
-          <input type="text" name="name" id="name" required>
-        </div>
-        <div class="input-wrapper">
-          <label for="email">Email Address: </label>
-          <input type="email" name="email" id="email" required>
-        </div>
-        <div class="input-wrapper">
-          <label>Gender: </label>
-          <input type="checkbox" id="male" name="male" value="male">
-          <label for="male">Male</label><br>
-          <input type="checkbox" id="female" name="female" value="female">
-          <label for="male">Female</label><br>
-          <input type="checkbox" id="other" name="other" value="other">
-          <label for="other">Other</label><br>
-          <input type="checkbox" id="undisclosed" name="undisclosed" value="undisclosed">
-          <label for="undisclosed">Rather not say</label><br>
-        </div>
-        <div class="input-wrapper">
-          <label for="Address">Address: </label>
-          <input type="text" name="address" id="address" required>
-        </div>
-        <div class="input-wrapper">
-          <label for="city">City: </label>
-          <input type="text" id="city" name="city" list="city-list" />
-          <datalist id="city-list">
-            <!--[if lte IE 9]><select><![endif]-->
-            <option label="" value="Abbotsford"></option>
-            <option label="" value="Airdrie"></option>
-            <option label="" value="Barrie"></option>
-            <option label="" value="Belleville"></option>
-            <option label="" value="Brampton"></option>
-            <option label="" value="Brantford"></option>
-            <option label="" value="Burlington"></option>
-            <option label="" value="Burnaby"></option>
-            <option label="" value="Calgary"></option>
-            <option label="" value="Cambridge"></option>
-            <option label="" value="Chilliwack"></option>
-            <option label="" value="Coquitlam"></option>
-            <option label="" value="Delta"></option>
-            <option label="" value="Edmonton"></option>
-            <option label="" value="Fredericton"></option>
-            <option label="" value="Grande Prairie"></option>
-            <option label="" value="Greater Sudbury"></option>
-            <option label="" value="Guelph"></option>
-            <option label="" value="Hamilton"></option>
-            <option label="" value="Kamloops"></option>
-            <option label="" value="Kawartha Lakes"></option>
-            <option label="" value="Kelowna"></option>
-            <option label="" value="Kingston"></option>
-            <option label="" value="Kitchener"></option>
-            <option label="" value="Lethbridge"></option>
-            <option label="" value="London"></option>
-            <option label="" value="Maple Ridge"></option>
-            <option label="" value="Markham"></option>
-            <option label="" value="Medicine Hat"></option>
-            <option label="" value="Mirabel"></option>
-            <option label="" value="Mississauga"></option>
-            <option label="" value="Moncton"></option>
-            <option label="" value="Nanaimo"></option>
-            <option label="" value="New Westminster"></option>
-            <option label="" value="Niagara Falls"></option>
-            <option label="" value="Norfolk County"></option>
-            <option label="" value="North Bay"></option>
-            <option label="" value="North Vancouver"></option>
-            <option label="" value="Oshawa"></option>
-            <option label="" value="Ottawa"></option>
-            <option label="" value="Peterborough"></option>
-            <option label="" value="Pickering"></option>
-            <option label="" value="Port Coquitlam"></option>
-            <option label="" value="Prince George"></option>
-            <option label="" value="Red Deer"></option>
-            <option label="" value="Regina"></option>
-            <option label="" value="Richmond"></option>
-            <option label="" value="Richmond Hill"></option>
-            <option label="" value="Saint John"></option>
-            <option label="" value="Sarnia"></option>
-            <option label="" value="Saskatoon"></option>
-            <option label="" value="Sault Ste. Marie"></option>
-            <option label="" value="St. Albert"></option>
-            <option label="" value="St. Catharines"></option>
-            <option label="" value="St. John's"></option>
-            <option label="" value="Surrey"></option>
-            <option label="" value="Thunder Bay"></option>
-            <option label="" value="Toronto"></option>
-            <option label="" value="Vancouver"></option>
-            <option label="" value="Vaughan"></option>
-            <option label="" value="Victoria"></option>
-            <option label="" value="Waterloo"></option>
-            <option label="" value="Welland"></option>
-            <option label="" value="Windsor"></option>
-            <option label="" value="Winnipeg"></option>
-            <!--[if lte IE 9]></select><![endif]-->
-          </datalist>
-        </div>
-        <div class="input-wrapper">
-          <label>Purpose of Contact: </label>
-          <input type="radio" id="question" name="purpose" value="purpose">
-          <label for="question">Question</label><br>
-          <input type="radio" id="Comment" name="purpose" value="comment">
-          <label for="comment">Comment</label><br>
-          <input type="radio" id="hiring" name="purpose" value="hiring">
-          <label for="hiring">Hiring</label><br>
-        </div>
-        <div class="input-wrapper">
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" rows="5" cols="50">
-          Enter your message here.
-          </textarea>
-        </div>
-        <div class="input-wrapper">
-          <input type="submit" value="Submit">
-        </div>
-      </form>
-      
     </div>
     <!--<div id="bottom-wrapper" class="section">
     </div>-->
