--- a/index.html
+++ b/index.html
@@ -4,130 +4,107 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
     <title>Kiara's Online Portfolio | Home Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/fa246b5827.js" crossorigin="anonymous"></script>
     <link href="/css/mvp.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
   </head>
   <body>
     <div id="content-wrapper">
       <div id="banner">
         <section>
           <header>
+            <img src="assets/Photo_Circle.png" alt="Kiara Pelenio" width="280px" height="auto" />
             <h1>Hello, I'm <span>Kiara P.</span></h1>
-            <p><i>Web Developer</i></p>
+            <p>Web Developer</p>
             <nav id="menu">
-              <a href="/assets/Kiara_CV.pdf" download>Resume</a>
+              <a href="/assets/KiaraP_CV.pdf" download>Resume</a>
               <a href="#contact">Contact Me</a>
             </nav>
           </header>
         </section>
       </div>
       <div id="intro">
-        <h2>About Me</h2>
-        <section class="two-column">
-          <img src="assets/photo.png" alt="Kiara Pelenio" width="250" height="250" />
-          <p> I am Kiara, an aspiring Web Developer from Ontario, Canada. I like making beautiful and functional websites, coding, design and problem-solving. I've studying at Seneca College under the Computer Programming program since May 2023.</p>
+        <section>
+          <h2 class="dark-font">About Me</h2>
+          <div class="two-column">
+            <h3 class="dark-font">Basic Information</h3>
+            <p>I like making beautiful and functional websites. I am skilled in C, C++, HTML, CSS, JavaScript, Wordpress, Shopify, MySQL.</p>
+            <dl>
+              <dt>Age:</dt>
+              <dd>28+</dd>
+              <dt>Email:</dt>
+              <dd>krpelenio@myseneca.ca</dd>
+              <dt>Language:</dt>
+              <dd>English</dd>
+              <dt>Class Section:</dt>
+              <dd>NFF</dd>
+              <dt>Student ID:</dt>
+              <dd>126361211</dd>
+              <dt>Instructor:</dt>
+              <dd>Mark Meritt</dd>
+            </dl>
+          </div>
+          <div class="two-column">
+            <h3 class="dark-font">Academic Honesty</h3>
+            <p>
+              I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. I also declare that no part of this assignment has been distributed to other students.
+            </p>
+            <p class="date-text"><span class="label">Date: </span><span>Dec. 16, 2022</span></p>
+          </div>
         </section>
-        <section class="two-column">
-          <dl>
-            <dt>Age:</dt>
-            <dd>20</dd>
-            <dt>Email:</dt>
-            <dd>krpelenio@myseneca.ca</dd>
-            <dt>Language:</dt>
-            <dd>English</dd>
-            <dt>Class Section:</dt>
-            <dd>NFF</dd>
-            <dt>Student ID:</dt>
-            <dd>126361211</dd>
-            <dt>Instructor:</dt>
-            <dd>Mark Meritt</dd>
-          </dl>
+          </div>
+        </section>
+      </div>
+      <div id="educ">
+        <section>
+          <h2>EDUCATION</h2>
+            <p><strong>Seneca College - Computer Programming</strong><br>(May 2022~)</p>
+            <p>2-year diploma program at Newnham Campus.</p>
         </section>
       </div>
       <div id="more-intro">
         <section>
           <div class="three-column">
-            <i class="fa-light fa-circle-heart"></i>
-            <h4>Passionate</h4>
+            <img src="assets/icon_01.png" alt="Timely" width="80" height="80" />
+            <h4>Timely</h4>
+            <p>Delivers projects on time.</p>
           </div>
           <div class="three-column">
-            <i class="fa-light fa-handshake"></i>
+            <img src="assets/icon_02.png" alt="Collaborative" width="80" height="80" />
             <h4>Collaborative</h4>
+            <p>Works well with other devs.</p>
           </div>
           <div class="three-column">
-            <i class="fa-regular fa-heart"></i>
+            <img src="assets/icon_03.png" alt="Problem-solver" width="80" height="80" />
             <h4>Problem-solver</h4>
+            <p>Finds optimized solutions.</p>
           </div>
           <div class="three-column">
-            <i class="fa-regular fa-heart"></i>
-            <h4>Detail-oriented</h4>
+            <img src="assets/icon_04.png" alt="Organized" width="80" height="80" />
+            <h4>Organized</h4>
+            <p>Systematic and detail-oriented.</p>
           </div>
           <div class="three-column">
-            <i class="fa-regular fa-heart"></i>
+            <img src="assets/icon_05.png" alt="Curious" width="80" height="80" />
             <h4>Curious</h4>
+            <p>Not afraid to try new things.</p>
           </div>
           <div class="three-column">
-            <i class="fa-regular fa-heart"></i>
+            <img src="assets/icon_06.png" alt="Loves to Learn" width="80" height="80" />
             <h4>Loves to Learn</h4>
+            <p>Enthusiastic to learn new tech.</p>
           </div>
         </section>
       </div>
-      <!--
-      <div id="skills">
-        <section>
-          <h3>Skills</h3>
-          <div class="skill-wrap">
-            <div class="skill-item">
-              <div class="bar fill" style="width:90%">
-                <div class="tag bold flex">CSS</div>
-              </div>
-              <span>90%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:90%">
-                <div class="tag bold flex">HTML</div>
-              </div>
-              <span>90%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:80%">
-                <div class="tag bold flex">React</div>
-              </div>
-              <span>80%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:30%">
-                <div class="tag bold flex">JavaScript</div>
-              </div>
-              <span>80%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:50%">
-                <div class="tag bold flex">UI Design</div>
-              </div>
-              <span>50%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:30%">
-                <div class="tag bold flex">Photoshop</div>
-              </div>
-              <span>60%</span>
-            </div>
-            <div class="skill-item">
-              <div class="bar fill" style="width:70%">
-                <div class="tag bold flex">Illustrator</div>
-              </div>
-              <span>60%</span>
-            </div>
-          </div>
-        </section>
-      </div>
-      -->
       <div id="contact">
         <section>
-          <h3>CONTACT</h3>
+          <h2>CONTACT</h2>
           <form action="https://httpbin.org/" method="post" class="input-form">
             <div class="input-wrapper">
               <label for="name">Name: </label>
@@ -139,14 +116,22 @@
             </div>
             <div class="input-wrapper">
               <label>Gender: </label>
+              <div class="option-wrap">
               <input type="checkbox" id="male" name="male" value="male">
-              <label for="male">Male</label><br>
-              <input type="checkbox" id="female" name="female" value="female">
-              <label for="male">Female</label><br>
-              <input type="checkbox" id="other" name="other" value="other">
-              <label for="other">Other</label><br>
-              <input type="checkbox" id="undisclosed" name="undisclosed" value="undisclosed">
-              <label for="undisclosed">Rather not say</label><br>
+              <label for="male">Male</label>
+              </div>
+              <div class="option-wrap">
+                <input type="checkbox" id="female" name="female" value="female">
+                <label for="male">Female</label>
+              </div>
+              <div class="option-wrap">
+                <input type="checkbox" id="other" name="other" value="other">
+                <label for="other">Other</label>
+              </div>
+              <div class="option-wrap">
+                <input type="checkbox" id="undisclosed" name="undisclosed" value="undisclosed">
+              <label for="undisclosed">Rather not say</label>
+              </div>
             </div>
             <div class="input-wrapper">
               <label for="Address">Address: </label>
@@ -227,38 +212,40 @@
             </div>
             <div class="input-wrapper">
               <label>Purpose of Contact: </label>
-              <input type="radio" id="question" name="purpose" value="purpose">
-              <label for="question">Question</label><br>
-              <input type="radio" id="Comment" name="purpose" value="comment">
-              <label for="comment">Comment</label><br>
-              <input type="radio" id="hiring" name="purpose" value="hiring">
-              <label for="hiring">Hiring</label><br>
+              <div class="option-wrap">
+                <input type="radio" id="question" name="purpose" value="purpose">
+                <label for="question">Question</label>  
+              </div>
+              <div class="option-wrap">
+                <input type="radio" id="Comment" name="purpose" value="comment">
+                <label for="comment">Comment</label>
+              </div>
+              <div class="option-wrap">
+                <input type="radio" id="hiring" name="purpose" value="hiring">
+                <label for="hiring">Hiring</label>
+              </div>
             </div>
             <div class="input-wrapper">
               <label for="message">Message:</label>
-              <textarea id="message" name="message" rows="5" cols="50">
-              Enter your message here.
-              </textarea>
+              <textarea id="message" name="message" rows="5" cols="50"></textarea>
             </div>
-            <div class="input-wrapper">
+            <div class="input-wrapper button-wrapper">
               <input type="submit" value="Submit">
             </div>
           </form>  
         </section>
-        <section>
       </div>
-      <div id="ai">
+      <div id="sm">
         <section>
-          <h3>Academic Honesty</h3>
-          <p>
-            I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. No part of this assessment has been copied manually or electronically from any other source (including web sites) except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. I also declare that no part of this assignment has been distributed to other students.
-          </p>
-          <p><span class="label">Date: </span><span>Dec. 10, 2022</span></p>
+          <nav>
+            <a href="https://www.linkedin.com/in/krpelenio/" target="_blank"><img src="assets/linkedin.png" alt="LinkedIn" width="20" height="20" /></a>
+            <a href="https://github.com/kiararina" target="_blank"><img src="assets/github.png" alt="GitHub" width="20" height="20" /></a></a>
+          </nav>
         </section>
       </div>
     </div>
     <footer>
-      <p><i>© 2022 KRPM. All rights reserved.</i></p>
+      <p>© 2022 KRPM. All rights reserved.</p>
     </footer>
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script>
