--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div id="contact">
         <section>
           <h2>CONTACT</h2>
-          <form action="https://httpbin.org/" method="POST" class="input-form">
+          <form action="https://httpbin.org/post" method="POST" class="input-form">
             <div class="input-wrapper">
               <label for="name">Name: </label>
               <input type="text" name="name" id="name" required>
